<resources>
    <string name="app_name">Rats</string>
    <string name="activity_login_title">Connexion</string>
    <string name="email">Email</string>
    <string name="email_hint">Entrez votre email</string>
    <string name="password">Mot de passe</string>
    <string name="password_hint">Entrez votre mot de passe</string>
    <string name="validate">Valider</string>
    <string name="map">Carte</string>
    <string name="wagon">Mon wagon</string>
    <string name="parameters">Paramètres</string>
    <string name="placeholder">TODO</string>
    <string name="activity_wagon_title">Mon wagon</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_subtitle">Recevoir les alertes et mises à jour</string>
    <string name="dark_mode_title">Mode sombre</string>
    <string name="dark_mode_subtitle">Activer le mode sombre</string>
    <string name="personal_data_title">Données personnelles</string>
    <string name="back_button">Retour</string>
    <string name="next_button">Suivant</string>
    <string name="personal_data_subtitle">Gérer les autorisations et la confidentialité</string>
    <string name="security_mode_title">Mode sécurité renforcé</string>
    <string name="security_mode_subtitle">Activez les alertes de sécurité dans votre zone</string>
    <string name="connexion_btn_text">Se connecter</string>
    <string name="no_account">Vous n\'avez pas de compte ?</string>
    <string name="signup">S\'inscrire</string>
    <string name="login_headline">Votre sécurité est notre objectif!</string>
    <string name="login_welcome">Bienvenue RATP.</string>
    <string name="login_incorrect_credentials">Vos identifiants sont inccorects</string>
    <string name="login_fields_required">Tous les champs sont requis</string>
    <string name="login_server_error">Erreur serveur. Veuillez réessayer plus tard</string>
    <string name="login_network_error">Erreur réseau. Veuillez vérifier votre connexion</string>
    <string name="loading">Chargement…</string>
    <string name="passenger_name_template">John Doe</string>
    <string name="passenger_note_template">Note: 1.4</string>
    <string name="passenger_profile_image">passenger_profile_image</string>
    <string name="wagon_name_template">Rer B, Wagon 4</string>
    <string name="alert_in_train_template">5 alertes dans ce train</string>
    <string name="passenger_name_sample">John Doe</string>
    <string name="passenger_seat_sample">Seat: 12A</string>
    <string name="passenger_rating_sample">Rating: 4.5/5</string>
    <string name="passenger_comments_title">Commentaires</string>
    <string name="passenger_number_ratings">422 users rates</string>
    <string name="report_passenger_button_content">Signaler</string>
    <string name="rate_passenger_button_content">Noter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_plus">Plus</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_wagon">Mon wagon</string>
    <string name="menu_map">Carte</string>
    <string name="menu_report">Signaler</string>
    <string name="menu_more_text">Plus</string>
    <string name="menu_more_icon_text">menu plus icon</string>
    <string name="menu_chat_text">Chat</string>
    <string name="menu_chat_icon">menu chat icon</string>
    <string name="menu_wagon_text">Mon Wagon</string>
    <string name="menu_wagon_icon">menu wagon icon</string>
    <string name="menu_map_text">Carte</string>
    <string name="menu_map_icon_text">menu map icon</string>
    <string name="menu_report_text">Signaler</string>
    <string name="menu_report_icon_text">menu report icon</string>
    <string name="title_activity_more_menu">MoreMenuActivity</string>
    <string name="menu_more_settings">Paramètres</string>
    <string name="menu_more_transport_line">Toutes les lignes</string>
    <string name="menu_more_alert">Vos newsletters</string>
    <string name="settings_icon_more_desc">settings icon more</string>
    <string name="right_arrow_desc">flèche droite</string>
    <string name="map_icon_more_desc">map_icon_more_desc</string>
    <string name="alert_icon_more_desc">alert_icon_more_desc</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string name="train_icon_desc">Ligne icone</string>
    <string name="warning_icon_desc">Danger Icon</string>
    <string name="train_line_name_sample">Nom ligne de train</string>
    <string name="alert_count">2 alerts</string>
    <string name="arrow_icon">Icone flèche</string>
    <string name="transport_line_page_title">Lignes</string>
    <string name="filter_dangerous">Dangereux</string>
    <string name="filter_safe">Sûr</string>
    <string name="filter_incident">Incident</string>
    <string name="comment_date">28–08–4222</string>
    <string name="alert_title_sample">Hippopotame Dangereux</string>
    <string name="alert_date_sample">12 mai 2024</string>
    <string name="alert_category_sample">Danger imminent</string>
    <string name="alert_description_sample">Attention un hippopotame s\'est échappé du zoo de vincenne et est rentré dans un wagon</string>
    <string name="train_icon">train icon</string>
    <string name="train_name_sample_alert">RER B</string>
    <string name="icon_alert">icon alert</string>
    <string name="line_status_sample">Le traffic est sûr</string>
    <string name="alerts_title_sample">Alertes</string>
    <string name="follow_icon">follow icon</string>
    <string name="myself_message_username">You</string>
    <string name="sample_message_myself">This is my message.</string>
    <string name="myself_message_date">10:00 AM</string>
    <string name="user_image_alt_sample">user image alt</string>
    <string name="john_doe">John Doe</string>
    <string name="sample_message_textview">This is a sample message.</string>
    <string name="sample_message_text_date">10:00 AM</string>
    <string name="chat_wagon_name_sample">Chat du RER B</string>
    <string name="enter_message_input">Enter Message</string>
    <string name="text_send_sample">Send</string>
    <string name="error_message">Une erreur est survenue. Veuillez réessayer.</string>
    <string name="subscribe_icon_desc">Subscribe Icon</string>
    <string name="wagon_image_desc">Image de votre wagon</string>
    <string name="menu_more_logout">Déconnexion</string>
    <string name="logout_icon_desc">Déconnexion bouton</string>
    <string name="logout_dialog_title">Déconnexion</string>
    <string name="logout_dialog_message">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="logout_dialog_confirm">Confirmer</string>
    <string name="logout_dialog_cancel">Annuler</string>
    <string name="profile">profile</string>
    <string name="star_rating">Icone étoile</string>
    <string name="rating_comment_text">Votre commentaire</string>
    <string name="leave_your_comment_here">Ecrivez votre commentaire</string>
    <string name="cancel">Annuler</string>
    <string name="submit">Valider</string>
    <string name="user_information">Vos informations</string>
    <string name="profile_title">Bonjour</string>
    <string name="user_registered">Membre depuis le</string>
    <string name="_5">/5</string>
    <string name="user_rating">Votre évaluation</string>
    <string name="username">Nom d\'utilisateur</string>
    <plurals name="rating_count_format">
        <item quantity="one">Basé sur %d évaluation</item>
        <item quantity="other">Basé sur %d évaluations</item>
    </plurals>
    <string name="report_title">Signaler</string>
    <string name="report_description_text">Description</string>
    <string name="report_reason_text">Type d\'incident</string>
    <string name="report_description_hint">Donnez une description pour l\'incident</string>
    <string name="report_title_hint">Ceci sera affiché en premier</string>
    <string name="report_title_text">Description rapide</string>
    <string name="passenger">Passagers</string>
    <string name="hide_users_title">Cacher les utilisateurs</string>
    <string name="hide_users_subtitle">N\'affiche que votre position sur la carte</string>
    <string name="hide_reports_title">Cacher les signalements</string>
    <string name="hide_reports_subtitle">N\'affiche plus les signalements sur la carte</string>
    <string name="registered_report_message">Signalement enregistré</string>
    <string name="dangerous_individual">Individu dangereux</string>
    <string name="suspect_activity">Activité suspecte</string>
    <string name="dangerous_garbage">Déchet dangereux</string>
    <string name="other">Autre</string>
    <string name="invalid_date">Date invalide</string>
    <string name="format_error">Erreur de format</string>
    <string name="no_messages">No messages</string>
</resources>
