<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="48dp"
    android:layout_marginHorizontal="25dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="34dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/login_welcome"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_headline"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_incorrect"
        android:textSize="18sp"
        android:textColor="@color/md_theme_error"

        />

    <LinearLayout android:layout_height="wrap_content"
         android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/email"
            android:textColor="@color/text_primary"
            android:layout_marginVertical="8dp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:background="@drawable/rounded_border"
            android:paddingHorizontal="16dp"
            android:minHeight="60dp"
            />
    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/password"
            android:textColor="@color/text_primary"
            android:layout_marginVertical="8dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:background="@drawable/rounded_border"
            android:paddingHorizontal="16dp"
            android:minHeight="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingVertical="24dp"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/btn_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="16dp"
            android:text="@string/connexion_btn_text"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:paddingHorizontal="30dp"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:text="@string/no_account"
                android:layout_marginEnd="4dp">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/signup"
                android:textStyle="bold"
                android:textColor="@color/md_theme_tertiary">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>