<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passenger_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Passenger Name -->
    <TextView
        android:id="@+id/tv_passenger_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/passenger_name_sample"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Seat Information -->
    <TextView
        android:id="@+id/tv_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger_seat_sample"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_passenger_name"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/passenger_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger_rating_sample"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_seat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger_comments_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/passenger_rating"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/comment_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger_number_ratings"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_comments_title"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Comments List (RecyclerView) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_comment_view_holder"
        app:layout_constraintTop_toBottomOf="@id/comment_number"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Report Button -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Report Passenger Button -->
        <Button
            android:id="@+id/report_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
        android:text="@string/report_passenger_button_content"
        android:backgroundTint="?attr/colorError"
        android:layout_marginEnd="8dp" />

        <!-- Give Note Button -->
        <Button
            android:id="@+id/note_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
        android:text="@string/rate_passenger_button_content"
        android:layout_marginStart="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>