<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".MoreMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/menu_item_rounded"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/settings_icon_more_desc"
                android:src="@drawable/settings_icon"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_more_settings"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onBackground"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/right_arrow_desc"
                android:src="@drawable/right_arrow_icon"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/transport_line_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/menu_item_rounded"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/map_icon_more_desc"
                android:src="@drawable/map_icon"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_more_transport_line"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onBackground"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/right_arrow_desc"
                android:src="@drawable/right_arrow_icon"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/menu_item_rounded"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/alert_icon_more_desc"
                android:src="@drawable/alert_icon"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_more_alert"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onBackground"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/right_arrow_desc"
                android:src="@drawable/right_arrow_icon"/>
        </LinearLayout>
    </LinearLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_bottom_navigation"
        android:name="com.rats.ui.fragments.BottomMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_bottom_menu"
        />

</LinearLayout>